@@ -1,0 +1,24 @@
+# last modified 2016-08-18 by J. Fox
+
+readSAS <- function(file, rownames=FALSE, stringsAsFactors=default.stringsAsFactors()){
+    Data <- as.data.frame(haven::read_sas(file))
+    if (rownames){
+        check <- length(unique(col1 <- Data[[1]])) == nrow(Data)
+        if (!check) warning ("row names are not unique, ignored")
+        else {
+            rownames(Data) <- col1
+            Data[[1]] <- NULL
+        }
+    }
+    if (stringsAsFactors){
+        char.cols <- sapply(Data, class) == "character"
+        if (any(char.cols)){
+            for (col in names(Data)[char.cols]){
+                fac <- Data[, col]
+                fac[fac == ""] <- NA
+                Data[, col] <- as.factor(fac)
+            } 
+        }
+    }
+    Data
+}
